<resources>
    <string name="news_welcome">New in this version</string>
    <string name="news_title">News</string>
    <string name="welcome">Welcome to Cheat-Database!</string>
    <string name="news_text_static">Thanks so much for using Cheat-Database.</string>
    <string name="app_name">Cheat-Database</string>
    <string name="app_label">Cheat-Database</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="ok">OK</string>
    <string name="showGameList">Game list</string>
    <string name="showCheatList">Cheat list</string>
    <string name="search_results">Results for search query</string>
    <string name="no_cheats_title">No cheatList available</string>
    <string name="no_cheats_text">No cheatList yet available in our database for this game. Please check back later.</string>
    <string name="please_wait">Please wait</string>
    <string name="retrieving_data">Retrieving data</string>
    <string name="cheat">cheat</string>
    <string name="cheatList">cheatList</string>
    <string name="game">game</string>
    <string name="games">games</string>
    <string name="no_internet">No Internet connection available. Try again a bit later.</string>
    <string name="search_hint">Search a game</string>
    <string name="splash_screen">Loading Cheat-Database&#8230;&#8230;&#8230;</string>
    <string name="members_cheats_title">%s\'s Tricks</string>
    <string name="placeholder">Placeholder</string>
    <string name="lead_bolt_text">Our App recommendations ></string>
    <string name="enterGame">Enter game title:</string>
    <string name="enter_game_hint">Game Title</string>
    <string name="game_platform">System</string>
    <string name="button_searchCheats">Search for cheatList</string>
    <string name="cancel">Cancel</string>
    <string name="clearForm">Clear</string>
    <string name="error_nothing_found_title">Nothing found!</string>
    <string name="error_nothing_found_text">No game could be found with your search query %s. Please try again with less keywords.</string>
    <string name="button_closeNothingFoundPopup">Refine query</string>
    <string name="cheat_counter_headline">Over %s cheatList and counting!</string>
    <string name="total_cheats_unknown">Hundreds of thousands of cheatList!</string>
    <string name="new_cheats_title">New cheatList for these games:</string>
    <string name="advanced_search">advanced / full text search</string>
    <string name="favorites">Favorites</string>
    <string name="goto_main_screen">Home</string>
    <string name="goto_news">News</string>
    <string name="goto_games_and_cheats">Games &amp; Tricks</string>
    <string name="goto_cheat">To cheat</string>
    <string name="goto_cheat_list">To cheat overview</string>
    <string name="menu_fulltext_search_short">Full Text Search</string>
    <string name="menu_fulltext_search_long">Full text search in listed cheatList</string>
    <string name="menu_server_status">Server status</string>
    <string name="menu_more_apps">More Apps from us</string>
    <string name="menu_pocketchange">Pocket Change Balance</string>
    <string name="report_cheat_title">Report Cheat</string>
    <string name="thanks_for_reporting">Thank you for your report. If we get enough (individual) reports we will consider removing this cheat from the database.</string>
    <string name="rate_cheat_plain">Rate</string>
    <string name="rate_cheat">Rate Cheat</string>
    <string name="rate_cheat_here">Rate this cheat here</string>
    <string name="rating_your">Your cheat rating:</string>
    <string name="rating_inserted">Thank you! Your rating has been registered.</string>
    <string name="rating_updated">Thank you! Your rating has been updated.</string>
    <string name="rating_processing">Your rating is being processed&#8230;</string>
    <string name="register_title">Register here</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-Mail</string>
    <string name="register_thanks">Registration successful. Thank you!</string>
    <string name="register">Register</string>
    <string name="register_account">Register New Account</string>
    <string name="register_instead">Register instead</string>
    <string name="register_login">Login / Register</string>
    <string name="login">Login</string>
    <string name="login_title">Login here</string>
    <string name="login_instead">Login instead</string>
    <string name="username_email">Username or E-Mail</string>
    <string name="login_failed">Login not successful. Wrong Username/Password combination. Visit www.cheat-database.com to recover your password.</string>
    <string name="member_banned">Your account has been banned.</string>
    <string name="login_ok">Login successful.</string>
    <string name="logout">Logout</string>
    <string name="logout_ok">Logout successful.</string>
    <string name="login_forgot">Forgot login data</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_send_password">Send login data by email</string>
    <string name="login_sent_ok">Login data has been sent to you via email</string>
    <string name="err">Error</string>
    <string name="err_username_length">Username must be at least 6 characters long.</string>
    <string name="err_username_used">This username is already being used.</string>
    <string name="err_email_invalid">Email is not valid.</string>
    <string name="err_email_used">This email address is already being used.</string>
    <string name="err_password_length">Password must be at least 6 characters long.</string>
    <string name="err_other_problem">There was a problem creating the user account. Please try again a bit later. If the problem remains you can also register at www.cheat-database.com/register.</string>
    <string name="err_email_user_not_found">No user found with this email address.</string>
    <string name="err_data_not_accessible">Requested data could not be retrieved. Please try again a bit later.</string>
    <string name="err_sd_not_accessible">SD card not accessible at the moment.</string>
    <string name="err_saving_to_sd">Saving to SD card failed.</string>
    <string name="err_no_member_data">Error: No member data could be found.</string>
    <string name="err_somethings_wrong">Something just went wrong. Please try again.</string>
    <string name="my_favorites">Your favorites</string>
    <string name="add_favorite">Add to your favorites</string>
    <string name="add_favorite_ok">Cheat successfully added to your favorites.</string>
    <string name="remove_favorite">Remove from your favorites</string>
    <string name="remove_favorite_ok">Cheat %s successfully removed from your favorites.</string>
    <string name="remove_favorite_nok">Error removing cheat from your favorites.</string>
    <string name="remove_favorites_ok">Game successfully removed from your favorites.</string>
    <string name="remove_favorites_nok">Error removing game from your favorites.</string>
    <string name="goto_favorites">Go to your favorites</string>
    <string name="favorite_deleted">Cheat was removed from your favorites.</string>
    <string name="favorite_error">Cheat already exists in your favorites.</string>
    <string name="favorite_empty">You have no favorites yet. Before you can access this view you have to add some cheatList to your favorites.</string>
    <string name="favorite_no_cheats">No cheatList for this game in your favorites yet.</string>
    <string name="favorites_welcome_text">This is the area where your favorites cheatList will be displayed. If you want to add a cheat to your favorites just press the &#8220;Menu&#8221; button on a cheat view and chose &#8220;Add to your favorites&#8221; in the Menu. If you wish to remove a cheat from your favorites you can do so my selecting &#8220;Remove from your favorites&#8221; in the game menu.</string>
    <string name="add_favorites_ok">Cheats successfully added to your favorites.</string>
    <string name="add_favorites_error">Some or all cheatList are already in your favorites. The new ones have been added.</string>
    <string name="add_one_favorite">Add cheat to favorites</string>
    <string name="add_all_favorites">Add all cheatList to favorites</string>
    <string name="favorite_adding">Adding favorites&#8230;&#8230;&#8230;</string>
    <string name="forum" translatable="false">Forum</string>
    <string name="forum_goto">Go to forum</string>
    <string name="forum_goto_online">Go to forum (online)</string>
    <string name="forum_button_submit">Post</string>
    <string name="forum_submit_failed">Your post could not be submitted. Please try again later.</string>
    <string name="forum_submit_ok">Submission successful.</string>
    <string name="forum_yet_empty">The forum for this cheat is yet empty. Be the first to write something. Tip: Favorite this cheat so you can come back to the forum easier.</string>
    <string name="forum_hint">Your message</string>
    <string name="forum_amount_posts">Forum (%1$d %2$s)</string>
    <string name="forum_single_post">post</string>
    <string name="forum_many_posts">posts</string>
    <string name="submit_cheat_short">Submit a Cheat</string>
    <string name="submit_cheat_long">Submit a Cheat for this Game</string>
    <string name="submit_cheat_your_title">Title of the Cheat</string>
    <string name="submit_cheat_your_body">Your Cheat Content</string>
    <string name="submit_cheat_review">Submit Cheat for Review</string>
    <string name="cheat_submit_ok">Thanks for your submission! We will review the cheat and will inform you by email if we are going to add it to the database. By the way: You can edit or delete your submitted cheatList via our website www.cheat-database.com.</string>
    <string name="cheat_submit_nok">There went something wrong submitting your cheat. Please try again.</string>
    <string name="submit_cheat_instructions_title">Information about submitting a cheat</string>
    <string name="submit_cheat_consent_title">Terms &amp; Conditions</string>
    <string name="submit_cheat_consent_text">I hereby agree that my submitted cheat may be proofread and grammatically in order to meet our minimum quality requirement.\n\nBy submitting this cheat you will grant Cheat-Database the right to publish and use your submitted content via App and Website. The author will not gain any financial claims from Cheat-Database.\n\nAll your submitted cheatList will be saved to your Cheat-Database member account. Once a cheat has been approved by us you will be notified by email.\n\nIf you want to make any changes to your cheatList you can login with your login information on www.cheat-database.com via your computer. There you can add screenshots, edit the text or delete your cheatList.</string>
    <string name="submit_cheat_title">Cheat Submission</string>
    <string name="submit_cheat_agree_terms_conditions">Agree with Terms &amp; Conditions</string>
    <string name="guidelines">Guidelines</string>
    <string name="meta_info">Meta Info</string>
    <string name="top_members_title">Members Top 20</string>
    <string name="share_title">Share cheat</string>
    <string name="action_settings">Settings</string>
    <string name="search_game">Search Game</string>
    <string name="contactform_title">Contact Us</string>
    <string name="submit_cheat_instructions_activity_title">For which game would you like to submit a cheat?</string>
    <string name="submit_cheat_instructions_activity_subtitle">To submit a cheat you first have to search the database for the game you want to submit a cheat for. In the game view you will find a button to submit a cheat for that game. Please note that you have to be logged in as a member in order to be able to submit cheatList.</string>
    <string name="rate_us">Rate Cheat-Database</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>