<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:checkableBehavior="single">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_drawer_cheats"
            android:title="@string/goto_games_and_cheats" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_drawer_favorites"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_members"
            android:icon="@drawable/ic_drawer_members"
            android:title="@string/top_members_title"
            android:visible="false" />
        <item
            android:id="@+id/nav_submit"
            android:icon="@drawable/ic_drawer_upload"
            android:title="@string/submit_cheat_title" />
        <item
            android:id="@+id/nav_more_apps"
            android:icon="@drawable/ic_drawer_more"
            android:title="@string/menu_more_apps"
            android:visible="false" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_drawer_rate"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_drawer_contact"
            android:title="@string/contactform_title" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/action_settings" />
    </group>


</menu>
