<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/nav_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gamesystems"
            android:icon="@drawable/ic_drawer_cheats"
            android:title="@string/goto_games_and_cheats" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_drawer_favorites"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_my_cheats"
            android:icon="@drawable/ic_pencil"
            android:title="@string/drawer_my_cheats"
            app:actionLayout="@layout/menu_counter" />
        <item
            android:id="@+id/nav_members"
            android:icon="@drawable/ic_drawer_members"
            android:title="@string/top_members_title" />
    </group>
    <group
        android:id="@+id/nav_group_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_more_apps"
            android:icon="@drawable/ic_drawer_more"
            android:title="@string/menu_more_apps" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_drawer_rate"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_drawer_contact"
            android:title="@string/contactform_title" />
        <item
            android:id="@+id/nav_terms_of_use"
            android:icon="@drawable/ic_lock"
            android:title="@string/privacy_policy" />
    </group>
    <group
        android:id="@+id/nav_group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/action_settings" />
    </group>
</menu>

