<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_cheatview"
        android:icon="@drawable/ic_action_view_as_list"
        android:orderInCategory="100"
        android:title="@string/goto_cheat"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate"
        android:icon="@drawable/ic_action_not_important"
        android:orderInCategory="200"
        android:title="@string/rate_cheat"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_to_favorites"
        android:icon="@drawable/ic_action_add_favorite"
        android:orderInCategory="300"
        android:title="@string/add_favorite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="150"
        android:title="@string/share_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_metainfo"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="500"
        android:title="@string/meta_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report"
        android:icon="@drawable/ic_action_report"
        android:orderInCategory="600"
        android:title="@string/report_cheat_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_submit_cheat"
        android:icon="@drawable/ic_action_upload"
        android:orderInCategory="700"
        android:title="@string/submit_cheat_short"
        app:showAsAction="never" />

</menu>