<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/termsandconditions_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/navy_blue_medium_dark"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/submit_cheat_consent_title"
        android:textAppearance="@style/CheatTitleTablet" >

    </TextView>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/termsandconditions_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_cheat_consent_text"
                android:textAppearance="@style/NormalText" >
            </TextView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/okbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/navy_blue_medium_dark"
        android:text="@string/ok" />

</LinearLayout>