<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/outer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary_light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


    <ImageView
        android:id="@+id/reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:paddingTop="10dp"
        android:src="@drawable/reload"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/text_cheat_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAppearance="@style/CheatTitle"
        android:textIsSelectable="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="10dp"
            android:text="@string/forum_yet_empty"
            android:textColor="#CCCCCC"
            android:visibility="invisible" />

        <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/llForumMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llForumInputMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/etEnterForumPost"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="10"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/forum_hint"
            android:minWidth="200dp"
            android:textColor="#000000">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnSubmitPost"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bluedark01_btn_default_holo_dark"
            android:minWidth="80dp"
            android:text="@string/forum_button_submit" />
    </LinearLayout>

    <include layout="@layout/adview_facebook" />
</LinearLayout>